src/Parsing/language.ebnf
Equivalence = Implies { "<=>" Implies } .

Implies = Disjunction [ ("=>" | "<=") Disjunction ] .

Disjunction = Conjunction { ("|" | "/") Conjunction } .

Conjunction = Unary { "&" Unary } .

Unary = Expr | ("-" | "!") Unary.

Expr = Variable | 
        "(" Equivalence ")" | 
        "#" Variable Unary |
        "?" Variable Unary .


Variable is a string over letters, digits and the following characters: - _ . [ ] $ @. Variable must not end with '-'. Note that it also cannot start with '-' since '-' is interpreted as a logical NOT.
